--- a/front/.gitignore
+++ b/front/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# json-server
+db.json
+routes.json
+
 # dependencies
 /node_modules
 /.pnp
