--- a/front/package.json
+++ b/front/package.json
@@ -25,6 +25,7 @@
     "@types/node": "18.15.12",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
+    "@types/react-slick": "^0.23.10",
     "@types/react-speech-recognition": "^3.9.2",
     "@types/react-youtube": "^7.10.0",
     "@types/socket.io-client": "^3.0.0",
@@ -49,7 +50,6 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
-    "react-perfect-scrollbar": "^1.5.8",
     "react-slick": "^0.29.0",
     "react-speech-recognition": "^3.10.0",
     "react-toastify": "^9.1.2",
@@ -71,13 +71,13 @@
   },
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.21",
-    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "json-server": "^0.17.4",
     "prettier": "^2.8.7"
   }
 }
