--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@mui/material": "^5.13.1",
     "@ramonak/react-progress-bar": "^5.0.3",
+    "@react-icons/all-files": "^4.1.0",
     "@react-three/drei": "9.50",
     "@react-three/fiber": "^8.13.0",
     "@speechly/speech-recognition-polyfill": "^1.3.0",
@@ -48,7 +49,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.3.4",
     "react-slick": "^0.29.0",
     "react-speech-recognition": "^3.10.0",
